docs(ideas): attribute the fat apply tail to thermal interrupts
Instrumented latency replays exonerate the JVM (zero GC pauses, one
exit-Halt safepoint) and put the cause on the pinned core's interrupt
census: TRM dominates at 191-519 per run, the landing-probability
arithmetic reproduces the observed tail count, and per-run TRM deltas
correlate monotonically with p99.99. The same event rate explains why
the thin tape's p99.99 stays clean at 155-240 ns — sample-rate
arithmetic, not a different machine. The max band stays honestly
unattributed; its next tool needs root.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01BAEUHYwpYKa14KcQLquQeW